--- a/tutorials/unscented_kalman_filter.html
+++ b/tutorials/unscented_kalman_filter.html
@@ -17,13 +17,13 @@
               <label class="inline"> Left wheel </label>
             </div>
             <div class="small-2 columns">
-              <input type="number" class="leftwheel" value="1">
+              <input type="number" class="leftwheel" value="1" step="0.1">
             </div>
             <div class="small-2 columns">
               <label class="inline"> Right wheel </label>
             </div>
             <div class="small-2 columns">
-              <input type="number" class="rightwheel" value="1">
+              <input type="number" class="rightwheel" value="1" step="0.1">
             </div>
             <div class="small-1 columns">
               <a class="button radius movebutton">Move</a>
@@ -32,33 +32,6 @@
             </div>
           </div>
         </div>
-        </div>
-        <div class="row">
-          <div id="comparison">
-            <svg></svg>
-            <div class="row">
-
-            <div class="small-1 columns">
-            </div>
-            <div class="small-2 columns">
-              <label class="inline"> Left wheel </label>
-            </div>
-            <div class="small-2 columns">
-              <input type="number" class="leftwheel" value="1">
-            </div>
-            <div class="small-2 columns">
-              <label class="inline"> Right wheel </label>
-            </div>
-            <div class="small-2 columns">
-              <input type="number" class="rightwheel" value="1">
-            </div>
-            <div class="small-1 columns">
-              <a class="button radius movebutton">Move</a>
-            </div>
-            <div class="small-1 columns">
-            </div>
-            </div>
-          </div>
         </div>
       </div>
       <div class='large-1 columns'>
